# visualizer

./: .build-credentials.example  .env.example  .gitattributes  .gitignore  3d-dev.md  CLAUDE.md  Dockerfile  HANDOFF_AUDIO_DEBUG.md  README.md  animated-gif-dev.md  apng-dev.md  app-output-dev.md  audio-reactivity-dev.doc  build-and-sign.sh  color-pallette-dev.md  controls-styling.md  custom-preset-editor.md  editor.html  fullscreen-macos-bug.md  future-dev.md  help.html  index.html  kaleidoscope-speed.md  layer-header.md  live-input-dev.md  live-video-dev.md  macos-import-bug.md  meyda-audio-dev.md  midi-dev.md  milkdrop-dev.md  more-presets.md  new-image-effects-future-dev.md  nginx.conf  noise-gate-dev.md  package-lock.json  package.json  preset-dev.md  preset-image-pan-dev.md  preset-image-tools-dev.md  preset-player-audit.md  (+22 more)
.github/workflows/: build-windows.yml
docs/: HANDOFF_AUDIO_DEBUG.md  HANDOFF_CUSTOM_PRESET_LOADING.md  audio-triggering.md  controls-styling.md  favorites.md  future-dev.md  handoff-milkdrop-research-may2026.md  more-presets.md  performance-control-roadmap.md  spectral-flux-dev.md  user-live.md
docs/bugs/: export-tauri.md  strobe.md  (+4 more)
installer/: gen-background.py
promo/: index.html  style.css  version.json
src/: auth-gate.js  controls.js  customPresets.js  devicePicker.js  fileUtils.js  importResultModal.js  main.js  presetRegistry.js  style.css  timelineStorage.js  videoTranscoder.js  visualizer.js
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+15 files in other folders)
